--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     class="punto">.</span></h1>
             <p>Un podcast que explora el mundo de la programación. Nuevos episodios, todos
                 los jueves cada 15 días.</p>
-            <button onclick="">CONOCÉ MÁS</button>
+            <button onclick="location.href='#section-nosotros'">CONOCÉ MÁS</button>
         </section>
         <section id="section-episodios" class="section-episodios">
             <div class="episodios-background"></div>
@@ -113,7 +113,7 @@
         <section id="section-novedades" class="section-novedades">
             <div class="novedades-background"></div>
             <h2>¿Querés las últimas novedades?</h2>
-            <button>ESCUCHÁ LOS EPISODIOS</button>
+            <button onclick="location.href='#section-episodios'">ESCUCHÁ LOS EPISODIOS</button>
         </section>
     </main>
     <footer>
