--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podcast Channel</title>
+    <title>Podcast Channel 1</title>
     <link rel="shortcut icon" href="images/iconlogo.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
